--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
 /* Aún no visto como relacionarlo con el index.html */
 
 /* probando crear una rama */
+#header {
+    background-color: #16a9bd;
+    font-size: 17px;
+    color: #000000;
+    margin: 30px;
+    padding: 10px 20px 10px 20px;
+    text-align: center;
+    font-style: italic;
+}
+
+#footer {
+    background-color: #16a9bd;
+    margin: 30px;
+    padding: 10px 20px 10px 20px;
+    font-size: 10px;
+}
+
+.links {
+    margin: 30px;
+    padding: 5Spx 5px 5px 5px;
+}
