--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 #header {
     background-color: #16a9bd;
     font-size: 17px;
-    color: #000000;
+    color: #3f110eea;
     margin: 30px;
     padding: 10px 20px 10px 20px;
     text-align: center;
@@ -13,6 +13,7 @@
 
 #footer {
     background-color: #16a9bd;
+    color: #3f110eea;
     margin: 30px;
     padding: 10px 20px 10px 20px;
     font-size: 10px;
@@ -20,5 +21,12 @@
 
 .links {
     margin: 30px;
-    padding: 5Spx 5px 5px 5px;
+    padding: 5px 5px 5px 5px;
+    background-color: bisque;
+    text-align: center;
+}
+
+.tabla {
+    margin: 30px;
+    padding: 5px 5px 5px 5px;
 }
