--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,47 @@
-/* Aún no visto como relacionarlo con el index.html */
+html,
+body {
+  min-width: 290px;
+  color: #4d4e53;
+  background-color: #ffffff;
+  font-family: 'Open Sans', Arial, sans-serif;
+  line-height: 1.5;
+}
 
-/* probando crear una rama */
-#header {
-    background-color: #16a9bd;
-    font-size: 17px;
-    color: #3f110eea;
-    margin: 30px;
-    padding: 10px 20px 10px 20px;
+header {
+    color: black;
+    margin: 10px;
     text-align: center;
-    font-style: italic;
+    font-size: 1.1em;
+    font-weight: thin;
+    background-color: rgb(223, 236, 236);
+    width:auto;
+    padding: 0;
+    margin: 0;
+  }
+
+#main-doc {
+    margin-left: 252px;
 }
 
-#footer {
-    background-color: #16a9bd;
-    color: #3f110eea;
-    margin: 30px;
-    padding: 10px 20px 10px 20px;
-    font-size: 10px;
+#navbar {
+    position: fixed;
+    min-width: 252px;
+    top: 0px;
+    left: 0px;
+    width: 100px;
+    height: 100%;
+    border-right: solid;
+    border-color: rgba(0, 22, 22, 0.4);
+  }
+
+#navbar li {
+    list-style-type: none;
 }
 
-.links {
-    margin: 30px;
-    padding: 5px 5px 5px 5px;
-    background-color: bisque;
-    text-align: center;
+.listas-article {
+    list-style-type: square;
 }
 
-.tabla {
-    margin: 30px;
-    padding: 5px 5px 5px 5px;
+.listas-article li {
+    margin-bottom: 12px;
 }
