--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+
+
+
+
+
+
+
+
+
+
+
+/*
 html,
 body {
     min-width: 290px;
@@ -76,3 +88,5 @@ header {
 .listas-article li {
     margin-bottom: 12px;
 }
+
+*/
