--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,19 @@
+body {
+    font-family: 'Cabin', sans-serif;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
 .nav-header {
     border: 1px solid #525252;
     height: 5rem;
     text-align: center;
     background-color: #37bbed;
+}
+
+.hero-image {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .cards-container {
@@ -36,7 +47,7 @@
 }
 
 .card-head {
-    width: 14em;
+    width: auto;
     height: 7em;;
     background-color: #0072bb;
     border: 1px solid #525252;
@@ -56,4 +67,16 @@
     text-align: center;
     vertical-align: middle;
     border: 1px solid #525252;
+    margin: auto;
+}
+
+.footer-logo {
+    max-width: 100px;
+    max-height: 200px;
+    margin: auto;
+}
+
+.contact-container {
+    font-size: small;
+    
 }
